--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,16 +18,37 @@
     <p></p>
     <h1>March Market</h1>
     <p></p>
+    <h3>Добавить продукт</h3>
+    <p></p>
+    <form class="row g-3" ng-submit="createNewProduct()">
+        <div class="col-auto">
+            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title"
+                   placeholder="Название продукта">
+        </div>
+        <div class="col-auto">
+            <input type="text" class="form-control" id="newProductCategoryTitle" ng-model="newProduct.categoryTitle"
+                   placeholder="Название категории">
+        </div>
+        <div class="col-auto">
+            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price"
+                   placeholder="Цена">
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3" ng-click="createNewProduct(newProduct)">Создать</button>
+        </div>
+    </form>
+    <p></p>
     <h3>Список товаров</h3>
     <p></p>
+
     <table class="table table-hover">
         <thead>
         <tr>
             <td>ID</td>
             <td>Название</td>
             <td>Цена</td>
-            <td></td>
-            <td></td>
+            <td>Удалить</td>
+            <td>Добавить</td>
         </tr>
         </thead>
         <tbody>
@@ -45,19 +66,6 @@
         </tbody>
     </table>
     <p></p>
-    <h3>Добавить продукт</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="createNewProduct()">
-        <div class="col-auto">
-            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title" placeholder="Название">
-        </div>
-        <div class="col-auto">
-            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price" placeholder="Цена">
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Создать</button>
-        </div>
-    </form>
     <h3>Список товаров в корзине</h3>
     <p></p>
     <table class="table table-hover">
@@ -65,18 +73,24 @@
         <tr>
             <td>ID</td>
             <td>Название</td>
+            <td>Количество</td>
             <td>Цена</td>
-            <td></td>
-            <td></td>
+            <td>Удалить</td>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="c in cart">
             <td>{{c.id}}</td>
             <td>{{c.title}}</td>
+            <td>
+                <button type="button" class="btn btn-primary btn-sm" ng-click="deleteOneProductFromCart(c.id)">-</button>
+                {{c.quantity}}
+                <button type="button" class="btn btn-primary btn-sm" ng-click="addProductToCart(c.id)">+</button>
+            </td>
             <td>{{c.price}}</td>
             <td>
-                <button class="btn btn-danger" ng-click="deleteOneProductFromCart(c.id)">Удалить</button>
+                <button class="btn btn-danger" ng-click="deleteProductFromCart(c.id)">Удалить</button>
+            </td>
             </td>
         </tr>
         </tbody>
