--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="index.js"></script>
 </head>
@@ -18,82 +17,111 @@
     <p></p>
     <h1>March Market</h1>
     <p></p>
-    <h3>Добавить продукт</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="createNewProduct()">
+    <br>
+    <form class="row g-3" ng-submit="userAuthService()" >
         <div class="col-auto">
-            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title"
+            <input class="form-control" type="text" id="userAuthName" ng-model="userAuth.username"
+                   placeholder="Логин">
+        </div>
+        <div class="col-auto">
+            <input class="form-control" type="password" id="userAuthPassword" ng-model="userAuth.password"
+                   placeholder="Пароль">
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3" >Войти</button>
+        </div>
+        <div class="col-auto">
+            <p> Ваш токен</p>
+            {{token}}
+        </div>
+    </form>
+
+    <br>
+    <p></p>
+    <h3>Добавить продукт</h3>
+    <form class="row g-3" ng-submit="createNewProduct()" >
+        <div class="col-auto">
+            <input class="form-control" type="text" id="newProductTitle" ng-model="newProduct.title"
                    placeholder="Название продукта">
         </div>
         <div class="col-auto">
-            <input type="text" class="form-control" id="newProductCategoryTitle" ng-model="newProduct.categoryTitle"
-                   placeholder="Название категории">
+            <input class="form-control" list="datalistOptions" placeholder="Выбрать категорию"
+                   ng-model="newProduct.categoryTitle">
+            <datalist id="datalistOptions">
+                <option value="Food">
+                <option value="Electronic">
+            </datalist>
         </div>
         <div class="col-auto">
-            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price"
+            <input class="form-control" type="number" id="newProductPrice" ng-model="newProduct.price"
                    placeholder="Цена">
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3" ng-click="createNewProduct(newProduct)">Создать</button>
+            <button type="submit" class="btn btn-primary mb-3" >Создать</button>
         </div>
     </form>
-    <p></p>
-    <h3>Список товаров</h3>
-    <p></p>
-
-    <table class="table table-hover">
+    <br>
+    <h3 align="center">Список товаров</h3>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Цена</td>
-            <td>Удалить</td>
-            <td>Добавить</td>
+            <td align="center">ID</td>
+            <td align="center">Название</td>
+            <td align="center">Цена</td>
+            <td align="center">Удалить из каталога</td>
+            <td align="center">Добавить в корзину</td>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="p in products">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
-            <td>
+            <td align="center">{{p.id}}</td>
+            <td align="center">{{p.title}}</td>
+            <td align="center">{{p.price}}</td>
+            <td align="center">
                 <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Удалить</button>
             </td>
-            <td>
-                <button class="btn btn-danger" ng-click="addProductToCart(p.id)">Добавить в корзину</button>
+            <td align="center">
+                <button class="btn btn-primary" ng-click="addProductToCart(p.id)">Добавить</button>
             </td>
         </tr>
         </tbody>
     </table>
-    <p></p>
-    <h3>Список товаров в корзине</h3>
-    <p></p>
-    <table class="table table-hover">
+    <br>
+    <h3 align="center">Список товаров в корзине</h3>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Количество</td>
-            <td>Цена</td>
-            <td>Удалить</td>
+            <td align="center">ID</td>
+            <td align="center">Название</td>
+            <td align="center">Количество</td>
+            <td align="center">Цена</td>
+            <td align="center">Удалить из корзины</td>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="c in cart">
-            <td>{{c.id}}</td>
-            <td>{{c.title}}</td>
-            <td>
-                <button type="button" class="btn btn-primary btn-sm" ng-click="deleteOneProductFromCart(c.id)">-</button>
+            <td align="center">{{c.id}}</td>
+            <td align="center">{{c.title}}</td>
+            <td align="center">
+                <button type="button" class="btn btn-primary btn-sm" ng-click="deleteOneProductFromCart(c.id)">-
+                </button>
                 {{c.quantity}}
                 <button type="button" class="btn btn-primary btn-sm" ng-click="addProductToCart(c.id)">+</button>
             </td>
-            <td>{{c.price}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="deleteProductFromCart(c.id)">Удалить</button>
-            </td>
+            <td align="center">{{c.price}}</td>
+            <td align="center">
+                <button class="btn btn-danger" ng-click="deleteProductFromCart(c.id)">Удалить список</button>
             </td>
         </tr>
         </tbody>
+        <caption>
+            <p align="center">
+                Итого: {{total}}
+            </p>
+            <p align="center">
+                <button class="btn btn-danger" ng-click="clear()">Очистить корзину</button>
+            </p>
+        </caption>
     </table>
 </div>
 </body>
